[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_toolkit_vald3nir"
version = "1.0.8"
authors = [
  { name="Valdenir Severino", email="vald3nir@gmail.com" },
]
description = "Collection of utility scripts for developing Python projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toolkit"]

[project.urls]
Homepage = "https://github.com/vald3nir/Python-Toolkit"
Issues = "https://github.com/vald3nir/Python-Toolkit/issues"